--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <meta name="msapplication-navbutton-color" content="#0000ff">
     <meta name="apple-mobile-web-app-status-bar-style" content="#0000ff">
 
+    <meta property="og:image" content="mau-manifesto.jpg" />
+    <meta property="og:title" content="Mau Manifesto" />
+    <meta property="og:site_name" content="ldaniel.eu" />
+    <meta property="og:description" content="Weekend project: an interactive scrollable one-pager that reads and speaks. About design. Text from 'Manifesto' by Bruce May from 2007." />
 
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:500,700' rel='stylesheet' type='text/css'>
     <!-- <link rel="stylesheet" href="style.css" /> -->
