fixing twitter link

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       </div>
 
       <div>
-        <a id="tweet" href="http://twitter.com/share?text=%23BruceMau%20%23design%20%23Manifesto%20by%20@ldanielswakman&url=http://www/ldaniel.eu/mau-manifesto" class="button button-reveal" target="_blank">Tweet</a>
+        <a id="tweet" href="http://twitter.com/share?text=%23BruceMau%20%23design%20%23Manifesto%20by%20@ldanielswakman&url=http://ldaniel.eu/mau-manifesto" class="button button-reveal" target="_blank">Tweet</a>
       </div>
 
     </aside>
