twitter meta tags

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
     <meta name="msapplication-navbutton-color" content="#0000ff">
     <meta name="apple-mobile-web-app-status-bar-style" content="#0000ff">
 
-    <meta property="og:image" content="mau-manifesto.jpg" />
+    <meta property="og:image" content="http://ldaniel.eu/mau-manifesto/mau-manifesto.jpg" />
     <meta property="og:title" content="Mau Manifesto" />
     <meta property="og:site_name" content="ldaniel.eu" />
     <meta property="og:description" content="Weekend project: an interactive scrollable one-pager that reads and speaks. About design. Text from 'Manifesto' by Bruce May from 2007." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="http://ldaniel.eu/mau-manifesto" />
+    <meta name="twitter:title" content="Mau Manifesto" />
+    <meta name="twitter:description" content="Weekend project: an interactive scrollable one-pager that reads and speaks. About design. Text from 'Manifesto' by Bruce May from 2007." />
+    <meta name="twitter:image" content="http://ldaniel.eu/mau-manifesto/mau-manifesto.jpg" />
 
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:500,700' rel='stylesheet' type='text/css'>
     <!-- <link rel="stylesheet" href="style.css" /> -->
